@@ -2056,11 +2056,12 @@ class PokerAvatarTestCase(unittest.TestCase):
 
         avatar.queuePackets()
         silence_all_messages()
+        clear_all_messages()
         avatar.handlePacketLogic(PacketPokerStart(serial = client.getSerial(),
                                                             game_id = gameId))
         restore_all_messages()
-
-        self.assertEqual(search_output("tried to start a new game while in game "), True)
+        self.assertEqual(search_output("tried to start a new game but is not the owner of the table"), True)
+        self.assertEqual(search_output("AutodealCheck scheduled"), True)
         # Coverage for when the server is shutting down
 
         avatar.service.shutting_down = True
@@ -2084,13 +2085,40 @@ class PokerAvatarTestCase(unittest.TestCase):
         silence_all_messages()
         clear_all_messages()
         avatar.handlePacketLogic(PacketPokerStart(serial = client.getSerial(),
-                                                            game_id = gameId))
+                                                             game_id = gameId))
         found = 0
         for packet in avatar.resetPacketsQueue():
-            found += 1
-            self.assertEquals(packet.type, PACKET_POKER_START)
             self.assertEquals(packet.game_id, gameId)
-        self.assertEquals(found, 1)
+            if packet.type == PACKET_POKER_PLAYER_CHIPS:
+                 #expect 2
+                found += 1
+            elif packet.type == PACKET_POKER_DEALER:
+                 #expect 1
+                found += 1
+                self.assertEquals(packet.previous_dealer, -1)
+                self.assertEquals(packet.dealer, 1)
+            elif packet.type == PACKET_POKER_IN_GAME:
+                 #expect 1
+                found += 1
+            elif packet.type == PACKET_POKER_POSITION:
+                # expect 4
+                found += 1
+            elif packet.type == PACKET_POKER_BLIND:
+                 #expect 2 
+                found += 1
+            elif packet.type == PACKET_POKER_PLAYER_CARDS:
+                 #expect 2 
+                found += 1
+            elif packet.type == PACKET_POKER_STATE:
+                 #expect 1
+                found += 1
+            elif packet.type == PACKET_POKER_START:
+                 #expect 1
+                found += 1
+            else:
+                self.fail("Unexpected packet" + packet.__str__())
+
+        self.assertEquals(found, 14)
         # This game start should "succeed" (but later fail due to game running) because 
         #  the owner of the table is our player.
         self.assertEqual(search_output("tried to start a new game while in a game"), False)
@@ -2130,7 +2158,7 @@ class PokerAvatarTestCase(unittest.TestCase):
         d2.addCallback(self.autoBlindAnte, 1, 101)
         d2.addCallback(self.sitTable, 1, 101)
         d2.addCallback(self.readyToPlay, 1, 101)
-        d2.addCallback(self.dealTable, 101)
+#        d2.addCallback(self.dealTable, 101)
         d2.addCallback(self.variousStartPackets, 1, 101)
         return defer.DeferredList((d, d2))
     # ------------------------------------------------------------------------
